# geant4-msc-scattering

./: .gitignore  CMakeLists.txt  README.md  VERIFICATION_REPORT.md  init_vis.mac  mscScattering.cc  run.mac  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
